--- a/readme.org
+++ b/readme.org
@@ -36,5 +36,6 @@ This paper uses a two-stage process. The first stage [cite:@kim2015simultaneous]
 ** Synthetic microdata for establishment surveys under informative sampling [cite:@kim2021synthetic]
 This paper is built on top of [cite:@kim2014multiple], and it incorporates pseudo likelihood framework in DP Gaussian mixture model.
 
+* Reference :ignore:
 #+CITE_EXPORT: natbib kluwer
 #+PRINT_BIBLIOGRAPHY:
