--- a/reference.bib
+++ b/reference.bib
@@ -73,3 +73,49 @@
   year={2014},
   publisher={Taylor \& Francis}
 }
+
+@article{hu2018bayesian,
+  title={Bayesian data synthesis and disclosure risk quantification: An application to the Consumer Expenditure Surveys},
+  author={Hu, Jingchen and Savitsky, Terrance D},
+  journal={arXiv preprint arXiv:1809.10074},
+  year={2018}
+}
+
+@article{savitsky2022bayesian,
+  title={Bayesian pseudo posterior mechanism under asymptotic differential privacy},
+  author={Savitsky, Terrance D and Williams, Matthew R and Hu, Jingchen},
+  journal={The Journal of Machine Learning Research},
+  volume={23},
+  number={1},
+  pages={2484--2520},
+  year={2022},
+  publisher={JMLRORG}
+}
+
+@article{savitsky2016bayesian,
+  title={Bayesian estimation under informative sampling},
+  author={Savitsky, Terrance D and Toth, Daniell},
+  year={2016}
+}
+
+@article{hu2022private,
+  title={Private tabular survey data products through synthetic microdata generation},
+  author={Hu, Jingchen and Savitsky, Terrance D and Williams, Matthew R},
+  journal={Journal of Survey Statistics and Methodology},
+  volume={10},
+  number={3},
+  pages={720--752},
+  year={2022},
+  publisher={Oxford University Press}
+}
+
+@article{hu2022risk,
+  title={Risk-efficient bayesian data synthesis for privacy protection},
+  author={Hu, Jingchen and Savitsky, Terrance D and Williams, Matthew R},
+  journal={Journal of Survey Statistics and Methodology},
+  volume={10},
+  number={5},
+  pages={1370--1399},
+  year={2022},
+  publisher={Oxford University Press}
+}
