--- a/reference.bib
+++ b/reference.bib
@@ -119,3 +119,9 @@
   year={2022},
   publisher={Oxford University Press}
 }
+
+@article{leon2019fully,
+  title={Fully Bayesian estimation under informative sampling},
+  author={Le{\'o}n-Novelo, Luis G and Savitsky, Terrance D},
+  year={2019}
+}
